# libcapi

./: Makefile.in  README.md  capi20.c  capi_mod_fritzbox.c  configure  libcapi20.def  meson.build
autom4te.cache/: output.0  output.1  requests  traces.1
src/: capi20.c  capi20.h  capi_mod_fritzbox.c  capi_mod_rcapi.c  capi_mod_std.c  capifunc.c  convert.c  meson.build
